<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="viewModel"
            type="me.cassiano.betterxp.viewmodel.MainActivityViewModel" />

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="93dp"
            android:src="@drawable/pokeball" />


        <TextView
            style="@style/TextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="57dp"
            android:paddingLeft="48dp"
            android:paddingRight="48dp"
            android:text="@string/main_activity_welcome_trainer" />

        <TextView
            style="@style/TextStyle2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:text="@string/main_activity_app_mission" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <Button
            style="@style/NextButtonStyle"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="34dp"
            android:onClick="@{() -> viewModel.onNextClicked()}"
            android:text="@string/action_next" />

    </LinearLayout>

</layout>