<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="restriction"
            type="me.cassiano.betterxp.model.Restriction" />

        <variable
            name="listener"
            type="me.cassiano.betterxp.adapter.StepsViewPagerAdapter.OnNextClickListener" />

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="20dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="77dp"
                android:src="@drawable/pokemon_exchange" />

            <TextView
                style="@style/TextStyle2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="60dp"
                android:text="@string/msg_how_many_transfer" />

            <EditText
                style="@style/TextStyle4.EditText"
                android:layout_marginTop="40dp"
                android:hint="@string/hint_val_50"
                android:text="@={restriction.stringValue}" />


            <Button
                style="@style/NextButtonStyle"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="34dp"
                android:layout_marginTop="34dp"
                android:onClick="@{() -> listener.onNextClicked()}"
                android:text="@string/action_next" />

        </LinearLayout>

    </ScrollView>

</layout>